deploy: 0b2418a1bc93c2304eeebb96daafd608ea3cb542

--- a/project/example/index.html
+++ b/project/example/index.html
@@ -176,13 +176,8 @@ Slides
 <p class=card-text>My research interests include conversational search, conversational recommender systems, information retrieval, and natural language processing.</p>
 <ul class=network-icon aria-hidden=true>
 <li>
-<a href=/#contact>
-<i class="fas fa-envelope"></i>
-</a>
-</li>
-<li>
 <a href="https://scholar.google.com/citations?hl=en&user=4nbeZhMAAAAJ" target=_blank rel=noopener>
-<i class="fas fa-graduation-cap"></i>
+<i class="ai ai-google-scholar"></i>
 </a>
 </li>
 <li>
