--- a/index.html
+++ b/index.html
@@ -122,13 +122,8 @@
 </div>
 <ul class=network-icon aria-hidden=true>
 <li>
-<a href=/#contact aria-label=envelope>
-<i class="fas fa-envelope big-icon"></i>
-</a>
-</li>
-<li>
-<a href="https://scholar.google.com/citations?hl=en&user=4nbeZhMAAAAJ" target=_blank rel=noopener aria-label=graduation-cap>
-<i class="fas fa-graduation-cap big-icon"></i>
+<a href="https://scholar.google.com/citations?hl=en&user=4nbeZhMAAAAJ" target=_blank rel=noopener aria-label=google-scholar>
+<i class="ai ai-google-scholar big-icon"></i>
 </a>
 </li>
 <li>
