--- a/publication/example/index.html
+++ b/publication/example/index.html
@@ -219,13 +219,8 @@ Create your slides in Markdown - click the <em>Slides</em> button to check out t
 <p class=card-text>My research interests include conversational search, conversational recommender systems, information retrieval, and natural language processing.</p>
 <ul class=network-icon aria-hidden=true>
 <li>
-<a href=/#contact>
-<i class="fas fa-envelope"></i>
-</a>
-</li>
-<li>
 <a href="https://scholar.google.com/citations?hl=en&user=4nbeZhMAAAAJ" target=_blank rel=noopener>
-<i class="fas fa-graduation-cap"></i>
+<i class="ai ai-google-scholar"></i>
 </a>
 </li>
 <li>
