--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -224,13 +224,8 @@ Click on the <strong>Slides</strong> button above to view the built-in slides fe
 <p class=card-text>My research interests include conversational search, conversational recommender systems, information retrieval, and natural language processing.</p>
 <ul class=network-icon aria-hidden=true>
 <li>
-<a href=/#contact>
-<i class="fas fa-envelope"></i>
-</a>
-</li>
-<li>
 <a href="https://scholar.google.com/citations?hl=en&user=4nbeZhMAAAAJ" target=_blank rel=noopener>
-<i class="fas fa-graduation-cap"></i>
+<i class="ai ai-google-scholar"></i>
 </a>
 </li>
 <li>
